==> dtodoroff/mbed-os/targets/TARGET_RENESAS/TARGET_RAXXX/TARGET_RA6M3/serial_api.c <==
#define  __SERIAL_API_C__ 0x0100
#include "mbed_assert.h"
#include <math.h>
#include <string.h>
#include <stdlib.h>
#include "serial_api.h"
#include "cmsis.h"
#include "PeripheralPins.h"
#include "gpio_api.h"
#include "bsp_api.h"
#include "mbed_drv_cfg.h"
#include "mbed_critical.h"
#define UART_NUM    10
#define IRQ_NUM     4
#define R_SCI_REG_SIZE                            (R_SCI1_BASE - R_SCI0_BASE)
#define SCI_UART_NUM_DIVISORS_ASYNC             (13U)
#define SCI_UART_MDDR_MIN                       (128U)
#define SCI_UART_MDDR_MAX                       (256U)
#define SCI_UART_BRR_MAX                        (255U)

void serial_init(serial_t *obj, PinName tx, PinName rx) 
/*==========================================================================*/
{
    volatile uint8_t dummy ;
    int is_stdio_uart = 0;
    // determine the UART to use
    uint32_t uart_tx = pinmap_peripheral(tx, PinMap_UART_TX);
    uint32_t uart_rx = pinmap_peripheral(rx, PinMap_UART_RX);
    uint32_t uart = pinmap_merge(uart_tx, uart_rx);

    MBED_ASSERT((int)uart != NC);

    obj->serial.uart = ((R_SCI0_Type *) (R_SCI0_BASE + (R_SCI_REG_SIZE * uart)));

    obj->serial.uart->SCMR = 0xF2;         // Transfer LSB-first,SMIF = 0

    /* ==== SCIF initial setting ==== */
    /* ---- Serial control register (SCSCR) setting ---- */
    /* B'00 : Internal CLK */
    obj->serial.uart->SCR = 0x00u;          /* SCIF transmitting and receiving operations stop */
//
    /* ---- FIFO control register (SCFCR) setting ---- */
    /* Transmit FIFO reset & Receive FIFO data register reset */
    obj->serial.uart->FCR = 0x0006u;

    /* ---- Serial status register (SCFSR) setting ---- */
    dummy = obj->serial.uart->SSR;
    obj->serial.uart->SSR = (dummy & 0x82u);         /* ER,BRK,DR bit clear */

    /* ---- Line status register (SCLSR) setting ---- */
    /* ORER bit clear */
    //obj->serial.uart->LSR = 0;

    /* ---- Serial extended mode register (SEMR) setting ----
    b6 BGDM - Baud rate generator double-speed mode  : Normal mode
    b4 ABCS - Base clock select in asynchronous mode : Base clock is 16 times the bit rate */
    obj->serial.uart->SEMR = 0x00u;

    /* ---- Bit rate register (SCBRR) setting ---- */
    serial_baud  (obj, 9600);
    serial_format(obj, 8, ParityNone, 1);

    /* ---- FIFO control register (SCFCR) setting ---- */
    obj->serial.uart->FCR = 0x0030u;

    /* ---- Serial port register (SCSPTR) setting ----
    b2 SPB2IO - Serial port break output : disabled
    b1 SPB2DT - Serial port break data   : High-level */
    obj->serial.uart->SPTR = 0x06u;    // SPB2IO = 1, SPB2DT = 1

    /* ---- Line status register (LSR) setting ----
    b0 ORER - Overrun error detect : clear */

    if (obj->serial.uart->SSR_b.ORER) {
        obj->serial.uart->SSR_b.ORER = 0;      // ORER clear
    }

    // pinout the chosen uart
    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);

    obj->serial.index = uart;

    uart_data[obj->serial.index].sw_rts.pin = NC;
    uart_data[obj->serial.index].sw_cts.pin = NC;

    /* ---- Serial control register (SCR) setting ---- */
    /* Setting the TE and RE bits enables the TxD and RxD pins to be used. */
    obj->serial.uart->SCR = 0x30;

    is_stdio_uart = (uart == STDIO_UART) ? (1) : (0);

    if (is_stdio_uart) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
}

void serial_free(serial_t *obj) 
/*==========================================================================*/
{
    uart_data[obj->serial.index].serial_irq_id = 0;
}

void serial_baud(serial_t *obj, int baudrate) 
/*==========================================================================*/
{
    baud_setting_t baud_setting;

    uint32_t baud_rate_error_x_1000 = (10*1000);

    baud_setting.brr = SCI_UART_BRR_MAX;
    baud_setting.semr_baudrate_bits_b.brme = 0U;
    baud_setting.mddr = SCI_UART_MDDR_MIN;

    /* Find the best BRR (bit rate register) value.
     *  In table g_async_baud, divisor values are stored for BGDM, ABCS, ABCSE and N values.  Each set of divisors
     *  is tried, and the settings with the lowest bit rate error are stored. The formula to calculate BRR is as
     *  follows and it must be 255 or less:
     *  BRR = (PCLK / (div_coefficient * baud)) - 1
     */

    int32_t  hit_bit_err = SCI_UART_100_PERCENT_X_1000;
    uint32_t hit_mddr    = 0U;
    uint32_t divisor     = 0U;

    uint32_t freq_hz = R_FSP_SystemClockHzGet(BSP_FEATURE_SCI_CLOCK);

    for (uint32_t select_16_base_clk_cycles = 0U;
         select_16_base_clk_cycles <= 1U && (hit_bit_err > ((int32_t) baud_rate_error_x_1000));
         select_16_base_clk_cycles++)
    {
        for (uint32_t i = 0U; i < SCI_UART_NUM_DIVISORS_ASYNC; i++)
        {
            /* if select_16_base_clk_cycles == true:  Skip this calculation for divisors that are not acheivable with 16 base clk cycles per bit.
             *  if select_16_base_clk_cycles == false: Skip this calculation for divisors that are only acheivable without 16 base clk cycles per bit.
             */
            if (((uint8_t) select_16_base_clk_cycles) ^ (g_async_baud[i].abcs | g_async_baud[i].abcse))
            {
                continue;
            }

            divisor = (uint32_t) g_div_coefficient[i] * baudrate;
            uint32_t temp_brr = freq_hz / divisor;

            if (temp_brr <= (SCI_UART_BRR_MAX + 1U))
            {
                while (temp_brr > 0U)
                {
                    temp_brr -= 1U;

                    /* Calculate the bit rate error. The formula is as follows:
                     *  bit rate error[%] = {(PCLK / (baud * div_coefficient * (BRR + 1)) - 1} x 100
                     *  calculates bit rate error[%] to three decimal places
                     */
                    int32_t err_divisor = (int32_t) (divisor * (temp_brr + 1U));

                    /* Promoting to 64 bits for calculation, but the final value can never be more than 32 bits, as
                     * described below, so this cast is safe.
                     *    1. (temp_brr + 1) can be off by an upper limit of 1 due to rounding from the calculation:
                     *       freq_hz / divisor, or:
                     *       freq_hz / divisor <= (temp_brr + 1) < (freq_hz / divisor) + 1
                     *    2. Solving for err_divisor:
                     *       freq_hz <= err_divisor < freq_hz + divisor
                     *    3. Solving for bit_err:
                     *       0 >= bit_err >= (freq_hz * 100000 / (freq_hz + divisor)) - 100000
                     *    4. freq_hz >= divisor (or temp_brr would be -1 and we would never enter this while loop), so:
                     *       0 >= bit_err >= 100000 / freq_hz - 100000
                     *    5. Larger frequencies yield larger bit errors (absolute value).  As the frequency grows,
                     *       the bit_err approaches -100000, so:
                     *       0 >= bit_err >= -100000
                     *    6. bit_err is between -100000 and 0.  This entire range fits in an int32_t type, so the cast
                     *       to (int32_t) is safe.
                     */
                    int32_t bit_err = (int32_t) (((((int64_t) freq_hz) * SCI_UART_100_PERCENT_X_1000) /
                                                  err_divisor) - SCI_UART_100_PERCENT_X_1000);

                    /* Take the absolute value of the bit rate error. */
                    if (bit_err < 0)
                    {
                        bit_err = -bit_err;
                    }

                    /* If the absolute value of the bit rate error is less than the previous lowest absolute value of
                     *  bit rate error, then store these settings as the best value.
                     */
                    if (bit_err < hit_bit_err)
                    {
                        baud_setting.semr_baudrate_bits_b.bgdm  = g_async_baud[i].bgdm;
                        baud_setting.semr_baudrate_bits_b.abcs  = g_async_baud[i].abcs;
                        baud_setting.semr_baudrate_bits_b.abcse = g_async_baud[i].abcse;
                        baud_setting.cks = g_async_baud[i].cks;
                        baud_setting.brr = (uint8_t) temp_brr;
                        hit_bit_err         = bit_err;
                    }

                    break;
                }
            }
        }
    }

    if ( hit_bit_err <= (int32_t) baud_rate_error_x_1000 )
    {
        obj->serial.uart->SEMR_b.BGDM = baud_setting.semr_baudrate_bits_b.bgdm;
        obj->serial.uart->SEMR_b.ABCS = baud_setting.semr_baudrate_bits_b.abcs;
        obj->serial.uart->SEMR_b.ABCSE = baud_setting.semr_baudrate_bits_b.abcse;
        obj->serial.uart->SMR_b.CKS = baud_setting.cks;
        obj->serial.uart->BRR = baud_setting.brr;
        obj->serial.uart->SEMR_b.BRME = 0;
    }
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits) {
    int parity_mode;
    int parity_select;

    MBED_ASSERT((stop_bits == 1) || (stop_bits == 2)); // 0: 1 stop bits, 1: 2 stop bits
    MBED_ASSERT((data_bits > 6) && (data_bits < 10)); // 5: 5 data bits ... 3: 8 data bits
    MBED_ASSERT((parity == ParityNone) || (parity == ParityOdd) || (parity == ParityEven) ||
                (parity == ParityForced1) || (parity == ParityForced0));

    stop_bits = (stop_bits == 1)? 0:
                (stop_bits == 2)? 1:
                0; // must not to be

    switch (data_bits) {
        case 7: data_bits = 0b11; break;
        case 9: data_bits = 0b00; break;
        case 8: 
        default:                // must not to be
            data_bits = 0b10;
            break;
    }

    switch (parity) {
    case ParityNone:
        parity_enable = 0;
        parity_mode = 0;
        break;
    case ParityOdd:
        parity_enable = 1;
        parity_mode = 1;
        break;
    case ParityEven:
        parity_enable = 1;
        parity_mode = 0;
        break;
    case ParityForced1:
    case ParityForced0:
    default:
        parity_enable = 0;
        parity_mode = 0;
        break;
    }

    obj->serial.uart->SMR_b.CHR = data_bits;    
    obj->serial.uart->SMR_b.PM = parity_mode;
    obj->serial.uart->SMR_b.PE = parity_enable;
    obj->serial.uart->SMR_b.STOP = stop_bits;
}

void serial_irq_handler(serial_t *obj, uart_irq_handler handler, uint32_t id) {
    irq_handler = handler;
    uart_data[obj->serial.index].serial_irq_id = id;
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable) 
{
    IRQn_Type IRQn;
    IRQHandler handler;
//
    IRQn = irq_set_tbl[obj->serial.index][irq];
    handler = hander_set_tbl[obj->serial.index][irq];
//
    if ((obj->serial.index >= 0) && (obj->serial.index <= 7)) {
        serial_irq_set_irq(IRQn, handler, enable);
    }
}

int serial_getc(serial_t *obj) {
    uint16_t err_read;
    int data;

    core_util_critical_section_enter();
    if (obj->serial.uart->SSR_FIFO & 0x93) {
        err_read = obj->serial.uart->SSR_FIFO;
        obj->serial.uart->SSR_FIFO = (err_read & ~0x93);
    }
    obj->serial.uart->SCR |= 0x0040;     // Set RIE
    core_util_critical_section_exit();

    if (obj->serial.uart->SSR_b.ORER) {
        obj->serial.uart->SSR_b.ORER = 0;      // ORER clear
    }

    while (!serial_readable(obj));
    data = obj->serial.uart->FRDRHL & 0xff;

    core_util_critical_section_enter();
    err_read = obj->serial.uart->SSR;
    obj->serial.uart->SSR = (err_read & 0xfffD);     // Clear RDF
    core_util_critical_section_exit();

    if (err_read & 0x80) {
        data = -1;  //err
    }
    return data;
}

void serial_putc(serial_t *obj, int c) {
    while (!serial_writable(obj));
    obj->serial.uart->TDR = c;
    serial_put_done(obj);
}

int serial_readable(serial_t *obj) {
    return ((obj->serial.uart->SSR_b.RDRF) != 0);  // RDRF
}

void serial_break_set(serial_t *obj) {
    core_util_critical_section_enter();
    // TxD Output(L)
    obj->serial.uart->SPTR &= ~0x02u;  // SPB2DT = 0
    //obj->serial.uart->SCR &= ~0x20u;   // TE = 0 (Output disable)
    obj->serial.uart->SCR_b.TE = 0;
    core_util_critical_section_exit();
}

void serial_break_clear(serial_t *obj) {
    core_util_critical_section_enter();
    obj->serial.uart->SCR |= 0x0020u; // TE = 1 (Output enable)
    obj->serial.uart->SPTR |= 0x0001u; // SPB2DT = 1
    core_util_critical_section_exit();
}

void serial_set_flow_control(serial_t *obj, FlowControl type, PinName rxflow, PinName txflow) {
    // determine the UART to use

    if (type == FlowControlRTSCTS) {
        core_util_critical_section_enter();
        obj->serial.uart->SCFCR |= 0x0008u;   // CTS/RTS enable
        core_util_critical_section_exit();
        pinmap_pinout(rxflow, PinMap_UART_RTS);
        pinmap_pinout(txflow, PinMap_UART_CTS);
    } else {
        core_util_critical_section_enter();
        obj->serial.uart->SCFCR &= ~0x0008u; // CTS/RTS diable
        core_util_critical_section_exit();
    }
}

int serial_tx_asynch(serial_t *obj, const void *tx, size_t tx_length, uint8_t tx_width, uint32_t handler, uint32_t event, DMAUsage hint)
{
    int i;
    buffer_t *buf = &obj->tx_buff;
    struct serial_global_data_s *data = uart_data + obj->serial.index;
    
    if (tx_length == 0) {
        return 0;
    }
    
    buf->buffer = (void *)tx;
    buf->length = tx_length * tx_width / 8;
    buf->pos = 0;
    buf->width = tx_width;
    data->tranferring_obj = obj;
    data->async_tx_callback = handler;
    serial_irq_set(obj, TxIrq, 1);
    
    while (!serial_writable(obj));
    i = buf->length;
    if (serial_available_buffer(obj) < i) {
        i = serial_available_buffer(obj);
    }
    do {
        uint8_t c = *(uint8_t *)buf->buffer;
        obj->tx_buff.buffer = (uint8_t *)obj->tx_buff.buffer + 1;
        ++buf->pos;
        obj->serial.uart->TDR = c;
    } while (--i);
    serial_put_done(obj);
    
    return buf->length;
}

void serial_rx_asynch(serial_t *obj, void *rx, size_t rx_length, uint8_t rx_width, uint32_t handler, uint32_t event, uint8_t char_match, DMAUsage hint)
{
    buffer_t *buf = &obj->rx_buff;
    struct serial_global_data_s *data = uart_data + obj->serial.index;
    
    if (rx_length == 0) {
        return;
    }
    
    buf->buffer = rx;
    buf->length = rx_length * rx_width / 8;
    buf->pos = 0;
    buf->width = rx_width;
    obj->char_match = char_match;
    obj->char_found = 0;
    data->rx_obj = obj;
    data->async_rx_callback = handler;
    data->event = 0;
    data->wanted_rx_events = event;
    
    serial_irq_set(obj, RxIrq, 1);
    serial_irq_err_set(obj, 1);
}

uint8_t serial_tx_active(serial_t *obj)
{
    return uart_data[obj->serial.index].tx_obj != NULL;
}

uint8_t serial_rx_active(serial_t *obj)
{
    return uart_data[obj->serial.index].rx_obj != NULL;
}

void serial_tx_abort_asynch(serial_t *obj)
{
    uart_data[obj->serial.index].tx_obj = NULL;
    obj->serial.uart->SCR |= 1 << 2;
    obj->serial.uart->SCR &= ~(1 << 2);
}

void serial_rx_abort_asynch(serial_t *obj)
{
    uart_data[obj->serial.index].rx_obj = NULL;
    obj->serial.uart->SCR |= 1 << 1;
    obj->serial.uart->SCR &= ~(1 << 1);
}
